# mistral_hack_london_2026

./: .env  .gitignore  Makefile  README.md  RUNS.md  SLICES.md  cursor_project_pull_and_review.md  package.json  repo_recovery_audit.md  tsconfig.json
.cursor/: AGENTS.md
.cursor/rules/: merge-marshal.mdc  slice-builder.mdc  slice-verifier.mdc  tool-router.mdc  ui-contract.mdc
.cursor/subagents/: README.md  merge-marshal.md  slice-builder.md  slice-verifier.md  tool-router.md  ui-contract.md
apps/api/: README.md  pyproject.toml
apps/api/src/startup_sim/: __init__.py
apps/api/src/startup_sim/api/: main.py
apps/api/src/startup_sim/api/routes/: simulation.py
apps/api/src/startup_sim/config/: env_normalization.py  settings.py
apps/api/src/startup_sim/integrations/hugging_face/: __init__.py  space_client.py
apps/api/src/startup_sim/integrations/strands/: __init__.py  agent_factory.py
apps/api/src/startup_sim/schemas/: simulation.py
apps/api/src/startup_sim/services/: sessions.py
apps/api/tests/: test_api.py  test_deterministic_replay.py
apps/web/: tsconfig.tsbuildinfo
schemas/: worktree-result.schema.json
scripts/: README.md  agent_run.sh  compress-images.mjs  init_run_dirs.sh  launch_tmux_codex_agents.sh  launch_worktrees.sh  merge_queue.sh  qa_worktree_gate.sh  recover_sources_from_sourcemaps.js  show_run_status.sh  validate_run_result.py
set_up/: Mistral Hackathon pre-hack meeting Europe edition - 2026_02_26 02_06 JST - Transcript.md  plan_0.md  post_hack_runtime_notes.md
set_up/once_upon_agentic_ai/: ch1.md  ch2.md  ch3.md  ch4.md  ch7.md  (+2 more)
(+1012 files in other folders)
