[project]
name = "startup-sim-api"
version = "0.1.0"
description = "FastAPI backend for the startup simulation MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "gradio-client>=1.13.3,<2.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/startup_sim"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
